--- a/ifwww.html
+++ b/ifwww.html
@@ -12,7 +12,7 @@
     <div class="videoContainer">
         <iframe class="videoContainer__video" width="1920" height="1080" src="https://www.youtube.com/embed/osVU35AlsPo?&autoplay=1" allow="autoplay; encrypted-media" frameborder="0"></iframe>
         <iframe src="https://open.spotify.com/embed/album/4WI3oFEsDiHU3I5xHz88sF" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-        <div class="home"><li><a href="benhoward.html">Home</a></li></div>
+        <div class="home"><li><a href="index.html">Home</a></li></div>
     </div>
 
 </body>    
