--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="bottom-left"><li><a href="noondaydream.html">Noonday Dream</a></li></div>
         <div class="top-left"><li><a href="everykingdom.html">Every Kingdom</a></li></div>
         <div class="top-right"><li><a href="ifwww.html">I Forget Where We Were</a></li></div>
-        <div class="centered"><a href="benhoward.html">Ben Howard</a> </div>
+        <div class="centered"><a href="index.html">Ben Howard</a> </div>
         <div class = "extra"><a href="extra.html">Gallery</a></div>
     </div>
     
