--- a/final/index.html
+++ b/final/index.html
@@ -20,7 +20,7 @@
     
     <div class="container">  
 
-        <div class="centered3"><li><a href="">Jubilee Road</a></li></div>
+        <div class="centered3"><li><a href="jubileerd.html">Jubilee Road</a></li></div>
         <div class="centered2"><li><a href="wrngcrwd.html">Wrong Crowd</a></li></div>
         <div class="centered1"><li><a href="longwaydown.html">Long Way Down</a></li></div>
         <div class="centered"><a href=".html">Tom Odell</a> </div>
