--- a/final/jubileerd2.html
+++ b/final/jubileerd2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html> 
 <html>
 <head>
-    <link rel="stylesheet" href="longwaydown.css">
+    <link rel="stylesheet" href="jubileerd.css">
     <link rel="stylesheet" href="https://use.typekit.net/xjk0ggu.css">
     <link rel="stylesheet" href="https://use.typekit.net/psv2vta.css">
     <link rel="stylesheet" href="https://use.typekit.net/pap6tzj.css">
     <link rel="stylesheet" href="https://use.typekit.net/pap6tzj.css">
-    <title>Long Way Down</title>
+    <title>Wrong Crowd</title>
     <STYLE>
         A{text-decoration:none}
     </STYLE>
@@ -14,9 +14,9 @@
     
 <body>
     <div class="videoContainer">
-        <h2><a href="longwaydown2.html">Long Way Down</a></h2>
-       <iframe src="https://open.spotify.com/embed/album/3oEqMQVxXfn2jGRaauU2iv" width="300" height="485" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-        <p1><a href="longwaydown.html">Back</a></p1>
+        <h2><a href="jubileerd2.html">Jubilee Road</a></h2>
+       <iframe src="https://open.spotify.com/embed/album/1BvaoUCJ7K14iRoZrLGu8j" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <p1><a href="jubileerd.html">Back</a></p1>
     </div>
 
 
