--- a/final/wrngcrwd1.html
+++ b/final/wrngcrwd1.html
@@ -14,7 +14,7 @@
     
 <body>
     <div class="videoContainer">
-        <h2 class="hed">Wrong Crowd</h2>
+        <h2><a href="wrngcrwd1.html">Wrong Crowd</a></h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/5P6KYFrSgyQ?start=11&autoplay=1"allow="autoplay; encrypted-media" frameborder="0" ></iframe>
         <p1><a href="wrngcrwd.html">Back</a></p1>
     </div>
