--- a/final/jubileerd2.html
+++ b/final/jubileerd2.html
@@ -11,16 +11,12 @@
         A{text-decoration:none}
     </STYLE>
     </head>
-    
 <body>
     <div class="videoContainer">
         <h2><a href="jubileerd2.html">Jubilee Road</a></h2>
        <iframe src="https://open.spotify.com/embed/album/1BvaoUCJ7K14iRoZrLGu8j" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         <p1><a href="jubileerd.html">Back</a></p1>
     </div>
-
-
     </body>    
-
-
+<script src="script.js"></script>
 </html>
