--- a/final/longwaydown2.html
+++ b/final/longwaydown2.html
@@ -18,9 +18,6 @@
        <iframe src="https://open.spotify.com/embed/album/3oEqMQVxXfn2jGRaauU2iv" width="300" height="485" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         <p1><a href="longwaydown.html">Back</a></p1>
     </div>
-
-
-    </body>    
-
-
+</body>    
+<script src="script.js"></script>
 </html>
