--- a/final/wrngcrwd2.html
+++ b/final/wrngcrwd2.html
@@ -10,17 +10,13 @@
     <STYLE>
         A{text-decoration:none}
     </STYLE>
-    </head>
-    
+</head>
 <body>
     <div class="videoContainer">
         <h2><a href="wrngcrwd2.html">Wrong Crowd</a></h2>
        <iframe src="https://open.spotify.com/embed/album/4oSEzHyFCgU9NP7TBWa2qj" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         <p1><a href="wrngcrwd.html">Back</a></p1>
     </div>
-
-
-    </body>    
-
-
+</body>    
+    <script src="script.js"></script>
 </html>
